--- a/register/angular.json
+++ b/register/angular.json
@@ -23,8 +23,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
-            ],
+  "node_modules/animate.css/animate.min.css",
+  "node_modules/bootstrap/dist/css/bootstrap.min.css",
+  "src/styles.css"
+],
             "scripts": []
           },
           "configurations": {
